--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <meta property="og:title" content="TESTDUMMY" />
     <meta property="og:description" content="TESTDUMMY out now on SoundCloud." />
     <meta property="og:image" content="https://whodfismhood556.netlify.app/social-preview.png" />
-    <meta property="og:url" content="https://whodfismhood556.netlify.app/" />
+    <meta property="og:url" content="https://testdummy0.netlify.app/" />
 
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TESTDUMMY" />
     <meta name="twitter:description" content="TESTDUMMY out now on SoundCloud." />
-    <meta name="twitter:image" content="https://whodfismhood556.netlify.app/social-preview.png" />
+    <meta name="twitter:image" content="https://testdummy0.netlify.app/" />
   </head>
   <body>
     <div id="root"></div>
