--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="TESTDUMMY" />
     <meta property="og:description" content="TESTDUMMY out now on SoundCloud." />
-    <meta property="og:image" content="https://testdummy0.netlify.app//social-preview.png" />
+    <meta property="og:image" content="https://testdummy0.netlify.app/social-preview.png" />
     <meta property="og:url" content="https://testdummy0.netlify.app/" />
 
     
